# PieceMeal

./: .gitignore  CMakeLists.txt  LICENSE.txt  PieceMealBot.c  PieceMealLib.c  README.md  main.c
bindings/go/: PieceMeal.go  go.mod
examples/: chess.c  minmax.c
include/: bot.h  checks.h  chess-lib-constants.h  chess-lib-inlines.h  chess-lib-types.h  chess-lib.h  chess-state.h  chess.h  game-over.h  increments.h  load-position.h  move-generation.h  move-is-legal.h  move.h  notation-deprecated.h  notation.h  pawn.h  perft.h  piece_square_tables.h  tokens.h  zobrist.h
include/private/: chess-lib-internals.h
scripts/: build_lib.py  build_zobrist.py  make_unity_bot.py  make_unity_lib.py  run_tests.py
src/: eval.c  game-over.c  increment-vectors.c  load_position-deprecated.c  load_position.c  make_move.c  move.c  move_generation.c  move_generationold.c.old  move_is_legal.c  notation-deprecated.c  notation.c  perft.c  piece_list.c  threats.c  tokens.c  uci.c  zobrist.c
src/chess/: eval.c  game-over.c  increment-vectors.c  load_position.c  make_move.c  move_generation.c  move_is_legal.c  notation.c  piece_list.c  threats.c  zobrist.c
src/eval/: bot.c  eval.c  move_order.c  search.c  see.c  transposition_table.c  worker.c
tests/: alpha_beta.cpp  check_after_move.cpp  fuzz.cpp  gameover.cpp  incremental_movegen.cpp  is_check.cpp  is_legal.cpp  is_pseudo_legal.cpp  make_unmake.cpp  perft.cpp  profile_test.c  pseudo_legal.cpp  test_correctness.c  test_is_check.c  test_is_legal.c  test_is_pseudo_legal.c  test_make_and_unmake.c  test_move_gen.c  test_notation.c  test_performance.c  test_positions.fen  test_save_pos.c  test_zobrist.c
